<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/setting"
        android:iconTint="#000000"
        android:icon="@drawable/ic_build"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/param1"
        android:iconTint="#000000"
        android:title="@string/param1" />
    <item
        android:id="@+id/param2"
        android:iconTint="#000000"
        android:title="@string/param2" />
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:iconTint="#000000"
        android:iconTintMode="src_in"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>





